Remove border and fix tool tips visibility vs display to not occupy space when hidden

--- a/styles/components/install-support-table.less
+++ b/styles/components/install-support-table.less
@@ -35,34 +35,31 @@ th.rotated {
 .support-div {
   margin-bottom: 15px;
   text-align: center;
-  display: inline-block;
-  vertical-align: top;
 }
 
 .install-support-col {
-  //float: left;
+  //Make divs behave like text so they get centered
   display: inline-block;
+
   width: auto;
   max-width: 100%;
-  // Grow colums to fill entire width.
-  flex: 1 0 auto;
   // Make font bold.
   font-weight: 700;
-  // Add minimal gap between columns.
+  // Add gap between columns.
   margin-right: 6px;
   margin-left: 2px;
   margin-bottom: 12px;
-  padding-top: 4px !important;
-  padding-bottom: 4px !important;
-  padding-right: 8px;
-  padding-left: 8px;
+
+  padding-top: 6px !important;
+  padding-bottom: 6px !important;
+  padding-right: 10px;
+  padding-left: 10px;
   // for tooltips
   position: relative;
-  border-radius: 5px;
-  border: 1px solid;
-  border-color: #939393;
 
-  .box-shadow(0 2px 4px rgba(0,0,0,.2));
+  border-radius: 5px;
+
+  .box-shadow(0 2px 2px rgba(0,0,0,.2));
 
   @media (prefers-color-scheme: dark) {
     color: black !important;
@@ -102,7 +99,7 @@ th {
 
 
 .support-col .tooltiptext {
-    visibility: hidden;
+    display: none;
     width: 80px;
     bottom: 70%;
     left: 70%;
@@ -116,7 +113,7 @@ th {
 }
 
 .install-support-col .tooltiptext {
-    visibility: hidden;
+    display: none;
     width: 80px;
     bottom: 70%;
     left: 70%;
@@ -130,5 +127,5 @@ th {
 }
 
 .install-support-col:hover .tooltiptext {
-    visibility: visible;
+    display: inline;
 }
